commit sezione musica da fare

--- a/index.html
+++ b/index.html
@@ -98,10 +98,13 @@
   
       <!-- SEZIONE CONTENUTI -->
       <section class="contenents float-left text-white">
+        <!-- barra fixata -->
         <div class="fix-bar">
           <a href="#">effettua l'upgrade</a>
         </div>
+        <!-- /barra fixata -->
 
+        <!-- lista contenuti -->
         <div class="list-contenents">
           <ul>
             <li>
@@ -130,7 +133,45 @@
             </li>
           </ul>
         </div>
-        
+        <!--/ lista contenuti -->
+
+        <!-- lista recently -->
+        <div class="list-recently ">
+          <h3>Recently played</h3>
+          <ul>
+            <li class="text-center">
+              <img src="assets/img/metal_lifting.jpg" alt="metal">
+              <h4>Heavy Metal</h4>
+              <span class="text-box-grey">Subtitle</span>
+            </li>
+            <li class="text-center">
+              <img src="assets/img/metal_lifting.jpg" alt="metal">
+              <h4>Heavy Metal</h4>
+              <span class="text-box-grey">Subtitle</span>
+            </li>
+            <li class="text-center">
+              <img src="assets/img/metal_lifting.jpg" alt="metal">
+              <h4>Heavy Metal</h4>
+              <span class="text-box-grey">Subtitle</span>
+            </li>
+            <li class="text-center">
+              <img src="assets/img/metal_lifting.jpg" alt="metal">
+              <h4>Heavy Metal</h4>
+              <span class="text-box-grey">Subtitle</span>
+            </li>
+            <li class="text-center">
+              <img src="assets/img/metal_lifting.jpg" alt="metal">
+              <h4>Heavy Metal</h4>
+              <span class="text-box-grey">Subtitle</span>
+            </li>
+            <li class="text-center">
+              <img src="assets/img/metal_lifting.jpg" alt="metal">
+              <h4>Heavy Metal</h4>
+              <span class="text-box-grey">Subtitle</span>
+            </li>
+          </ul>
+        </div>
+        <!-- /lista recently -->
       </section>
       <!-- /SEZIONE CONTENUTI -->
   
