--- a/index.html
+++ b/index.html
@@ -144,34 +144,83 @@
               <h4>Heavy Metal</h4>
               <span class="text-box-grey">Subtitle</span>
             </li>
+
             <li class="text-center">
-              <img src="assets/img/metal_lifting.jpg" alt="metal">
-              <h4>Heavy Metal</h4>
+              <img src="assets/img/stranger.jpeg" alt="stranger">
+              <h4>
+                Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)
+              </h4>
+              <span class="text-box-grey">Kyle Dixon & Michael Stein</span>
+            </li>
+
+            <li class="text-center">
+              <img src="assets/img/aquietplace.jpeg" alt="aquiet">
+              <h4>A quiet place</h4>
               <span class="text-box-grey">Subtitle</span>
             </li>
+
             <li class="text-center">
-              <img src="assets/img/metal_lifting.jpg" alt="metal">
-              <h4>Heavy Metal</h4>
+              <img src="assets/img/split.jpeg" alt="split">
+              <h4>Split</h4>
               <span class="text-box-grey">Subtitle</span>
             </li>
+
             <li class="text-center">
-              <img src="assets/img/metal_lifting.jpg" alt="metal">
-              <h4>Heavy Metal</h4>
+              <img src="assets/img/cure.jpeg" alt="cure">
+              <h4>A cure for wellness</h4>
               <span class="text-box-grey">Subtitle</span>
             </li>
+
             <li class="text-center">
-              <img src="assets/img/metal_lifting.jpg" alt="metal">
-              <h4>Heavy Metal</h4>
-              <span class="text-box-grey">Subtitle</span>
-            </li>
-            <li class="text-center">
-              <img src="assets/img/metal_lifting.jpg" alt="metal">
-              <h4>Heavy Metal</h4>
+              <img src="assets/img/sinister.jpeg" alt="sinister">
+              <h4>Sinister</h4>
               <span class="text-box-grey">Subtitle</span>
             </li>
           </ul>
         </div>
         <!-- /lista recently -->
+
+        <!-- lista creato -->
+        <div class="list-creato list-recently ">
+          <h3>Creato per John Doe</h3>
+          <span class="text-box-grey">
+            Più ascolti, più accurati saranno i suggerimenti.
+          </span>
+          <ul>
+            <li class="text-center">
+              <img src="assets/img/radar.jpeg" alt="radar">
+              <h4>Release Radar</h4>
+            </li>
+
+            <li class="text-center">
+              <img src="assets/img/mixdaily.jpeg" alt="mix daily">
+              <h4>
+                Daily Mix 1
+              </h4>
+            </li>  
+          </ul>
+        </div>
+        <!-- /lista creato -->
+
+        <!-- lista artisti -->
+        <div class="list-artist list-creato list-recently ">
+          <h3>Artisti più popolari</h3>
+          <span class="text-box-grey">
+            Più ascolti, più accurati saranno i suggerimenti.
+          </span>
+          <ul>
+            <li class="text-center">
+              <img src="assets/img/youg.jpeg" alt="young">
+              <h4>Young Beautiful</h4>
+            </li>
+
+            <li class="text-center">
+              <img src="assets/img/einaudi.jpeg" alt="einaudi">
+              <h4>Einaudi</h4>
+            </li>  
+          </ul>
+        </div>
+        <!-- /lista artisti -->
       </section>
       <!-- /SEZIONE CONTENUTI -->
   
