--- a/index.html
+++ b/index.html
@@ -298,7 +298,9 @@
           <div class="min-bar  text-white">
             <span>0:25</span>
             <div class="line-time">
-              <div class="time-avance"></div>
+              <div class="time-avance">
+                <div class="point-white display-none"></div>
+              </div>
             </div>
             <span>4:35</span>
           </div>
@@ -310,7 +312,9 @@
           <i class="fas fa-desktop"></i>
           <i class="fas fa-volume-up"></i>
           <div class="vol-line">
-            <div class="vol-avance"></div>
+            <div class="vol-avance">
+              <div class="point-white display-none"></div>
+            </div>
           </div>
         </div>
 
@@ -322,3 +326,4 @@
 
 </body>
 </html>
+
